--- a/templates/userprofileedit.html
+++ b/templates/userprofileedit.html
@@ -8,12 +8,12 @@
    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
-    <title>Document</title>
+    <title>sportyou</title>
 </head>
 <body>
     <div class="container rounded bg-white mt-5">
         <div class="row">
-            <div class="col-md-4 border-right">
+            <div class="col-12 col-md-4 mb-3 border-right">
                 <div class="d-flex flex-column align-items-center text-center p-3 py-5">
                     <div class="col-sm-6 custom-file">
                                        
@@ -27,7 +27,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class=" col-12 col-md-6 mt-5">
                 <div class="p-3 py-5">
                     <div class="d-flex justify-content-between align-items-center mb-3">
                         <div class="d-flex flex-row align-items-center back"><i class="fa fa-long-arrow-left mr-1 mb-1"></i>
@@ -51,7 +51,7 @@
                         <div class="col-md-6"><input type="text" class="form-control" placeholder="Bank Name" value="Bank of America"></div>
                         <div class="col-md-6"><input type="text" class="form-control" value="043958409584095" placeholder="Account Number"></div>
                     </div> -->
-                    <div class="mt-5 text-right">
+                    <div class="mt-5 text-center">
                         <button class="btn btn-primary" onclick="edit('{{user.user.id}}')" type="button">SAVE PROFILE</button></div>
                 </div>
             </div>
